--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -95,7 +95,7 @@
 body {
   font-family: Futura LT Pro Body;
 }
-.current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a {
+.pg-heading h2, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a {
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -107,7 +107,7 @@ body {
   -webkit-transition-duration: 0.5s;
   transition-duration: 0.5s;
 }
-.current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:before {
+.pg-heading h2:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -127,11 +127,18 @@ body {
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-.current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:hover:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:focus:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:active:before {
+.pg-heading h2:hover:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:hover:before, .pg-heading h2:focus:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:focus:before, .pg-heading h2:active:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:active:before {
   -webkit-transform: scaleY(0.5);
   transform: scaleY(0.5);
   -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
   transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+}
+.menu-hover-style-2 .main-navigation-ul li.current-page-ancestor a {
+  background-image: linear-gradient(bottom, #ffcd00 50%, transparent 50%);
+  background-image: -o-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
+  background-image: -moz-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
+  background-image: -webkit-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
+  background-image: -ms-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
 }
 .pg-title-column {
   position: relative;
@@ -144,7 +151,7 @@ body {
   margin: 0 auto;
   display: block;
 }
-.pg-title > p {
+.pg-title p {
   background-image: linear-gradient(bottom, #000 50%, transparent 50%);
   background-image: -o-linear-gradient(bottom, #000 50%, transparent 50%);
   background-image: -moz-linear-gradient(bottom, #000 50%, transparent 50%);
@@ -159,7 +166,7 @@ body {
   display: inline-block;
 }
 @media screen and (max-width: 782px) {
-  .pg-title > p {
+  .pg-title p {
     font-size: 5.6vw;
   }
 }
@@ -171,11 +178,11 @@ body {
     padding: 0px 25px;
   }
 }
-.pg-heading > h2 {
+.pg-heading h2 {
   font-size: 33px;
 }
 @media screen and (max-width: 782px) {
-  .pg-heading > h2 {
+  .pg-heading h2 {
     font-size: 5.6vw;
   }
 }
@@ -189,52 +196,43 @@ body {
     margin-top: -20px;
   }
 }
-.bw-column > div > h2 {
+.bw-column div button {
+  margin-left: 40px;
+}
+@media screen and (max-width: 768px) {
+  .bw-column div button {
+    margin-left: 20px;
+  }
+}
+.bw-column div h2 {
   color: #fff;
   padding: 15% 20px 0px;
   font-size: 2.2vw;
 }
 @media screen and (max-width: 949px) {
-  .bw-column > div > h2 {
+  .bw-column div h2 {
     padding: 3% 20px 0px;
   }
 }
 @media screen and (max-width: 768px) {
-  .bw-column > div > h2 {
+  .bw-column div h2 {
     padding: 20px;
     font-size: 20px;
   }
 }
-.bw-column > div > button {
-  margin-left: 40px;
-}
-@media screen and (max-width: 768px) {
-  .bw-column > div > button {
-    margin-left: 20px;
-  }
-}
-.bw-column-text > p {
+.bw-column-text p {
   color: #fff;
   font-size: 1.25vw;
   padding: 0px 40px;
 }
 @media screen and (max-width: 768px) {
-  .bw-column-text > p {
+  .bw-column-text p {
     font-size: 16px;
     padding: 0px 20px;
   }
 }
 .video-column {
   padding: 0px;
-}
-.accordion-base > div > div > svg {
-  fill: #0075c9;
-}
-.mk-accordion.simple-style .mk-accordion-single.current .mk-accordion-tab > .mk-svg-icon {
-  fill: #c1c1c1;
-}
-.paragraph-indent {
-  padding-left: 25px;
 }
 .header-column {
   padding: 50px;
@@ -243,6 +241,12 @@ body {
   max-width: 500px;
   float: none;
   margin: 0 auto;
+}
+.accordion-base div div svg {
+  fill: #0075c9;
+}
+.mk-accordion.simple-style .mk-accordion-single.current .mk-accordion-tab > .mk-svg-icon {
+  fill: #c1c1c1;
 }
 .dark-logo {
   width: 200px;
@@ -253,7 +257,7 @@ ul#menu-main_menu {
 .mk-main-navigation {
   position: relative;
 }
-ul#menu-main_menu > li > ul.sub-menu {
+ul#menu-main_menu li ul.sub-menu {
   background-color: #fff !important;
   color: #000;
   min-width: 160px;
@@ -261,20 +265,24 @@ ul#menu-main_menu > li > ul.sub-menu {
   top: 20px;
   left: -20px;
 }
-ul#menu-main_menu > li > ul.sub-menu > li > a {
+ul#menu-main_menu li ul.sub-menu li a {
   text-align: center;
   width: auto;
   font-size: 12px !important;
+  background-image: none;
+}
+.main-navigation-ul li.menu-item a.menu-item-link {
+  font-family: Futura LT Pro Heading;
 }
 .mk-main-navigation ul.sub-menu a.menu-item-link {
   color: #000;
   font-family: Futura LT Pro Heading;
 }
-.main-navigation-ul ul.sub-menu li.current-menu-item > a.menu-item-link {
-  color: #0075c9 !important;
-}
 .mk-main-navigation ul.sub-menu a.menu-item-link:hover {
   color: #b7b7b7 !important;
+}
+.main-navigation-ul ul.sub-menu li.current-menu-item a.menu-item-link {
+  color: #0075c9 !important;
 }
 #menu-main_menu li.menu-item.no-mega-menu {
   margin-right: 10px;
@@ -311,6 +319,14 @@ ul#menu-main_menu > li > ul.sub-menu > li > a {
   color: #0075c9;
   border: 3px solid #0075c9;
 }
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) {
+  width: 140px;
+}
+@media screen and (max-width: 1220px) {
+  #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) {
+    width: 120px;
+  }
+}
 #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) {
   padding: 0px;
   height: 40px;
@@ -338,12 +354,4 @@ ul#menu-main_menu > li > ul.sub-menu > li > a {
 }
 .mk-header-nav-container.one-row-style.menu-hover-style-2 {
   padding: 0px 25px;
-}
-.main-navigation-ul > li.menu-item > a.menu-item-link:hover {
-  background-size: 2px 100%;
-  transition-duration: 250ms;
-  transition-timing-function: ease;
-}
-.main-navigation-ul > li.menu-item > a.menu-item-link {
-  font-family: Futura LT Pro Heading;
 }
