--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -467,3 +467,29 @@ ul#menu-main_menu {
 .mk-header-nav-container.one-row-style.menu-hover-style-2 {
     padding: 0px 25px;
 }
+
+// ===  TAB STYLES === //
+
+.mk-tabs.default-style.vertical-style .mk-tabs-panes {
+    border: none;
+}
+.mk-tabs-tab > a {
+    @extend %link-hover-effect;
+}
+.mk-tabs.default-style.vertical-style .mk-tabs-tabs li.is-active a {
+    border-bottom: 0 !important;
+    padding-bottom: 0 !important;
+    padding-right: 10px !important;
+}
+.mk-tabs.default-style.vertical-style .mk-tabs-tabs {
+    border: none !important;
+}
+.mk-tabs.default-style .mk-tabs-tabs li a {
+    padding: 0 10px;
+    margin-bottom: 25px;
+    display: inline-block;
+    font-size: 16px;
+    display: inline-block;
+    border: 0px !important;
+    background-color: #fff;
+}
