--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -7,9 +7,7 @@
  Template:       jupiter
  Version:        1.0
  */
-/**
- * RTCC 2018 Theme Global Styles *
- */
+/* ============== RTCC 2018 Theme Global Styles ============== */
 /* ============== Font Colors ==============  */
 /* ============== Text Styles ==============  */
 @font-face {
@@ -38,17 +36,17 @@
   border: 1px solid #9c9c9c;
   cursor: pointer;
 }
-.btn-outline-blue > button, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) > button {
+.btn-outline-blue > button, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) > button {
   border: 3px solid #0075c9 !important;
   color: #0075c9 !important;
   transition: all 0.2s ease-in !important;
   background-color: #fff !important;
 }
-.btn-outline-blue > button:hover, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) > button:hover {
+.btn-outline-blue > button:hover, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) > button:hover {
   background: #0075c9 !important;
   color: #fff !important;
 }
-.btn-outline-blue > button:active, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) > button:active {
+.btn-outline-blue > button:active, #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) > button:active {
   background: #fff !important;
   color: #0075c9 !important;
 }
@@ -92,10 +90,15 @@
 .btn-regular-black:active {
   background: #5d5d5d;
 }
+/* ============== Global Page Element Style ============== */
 body {
   font-family: Futura LT Pro Body;
 }
-.current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a {
+p {
+  color: #000;
+}
+/* ============== Link Hover Effect ============== */
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3) {
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -107,7 +110,7 @@ body {
   -webkit-transition-duration: 0.5s;
   transition-duration: 0.5s;
 }
-.current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:before {
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3):before {
   content: "";
   position: absolute;
   z-index: -1;
@@ -127,18 +130,39 @@ body {
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-.current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:hover:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:focus:before, .current-page-ancestor.current-menu-ancestor.current-menu-parent.current-page-parent > a:active:before {
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3):hover:before, #menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3):focus:before, #menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3):active:before {
   -webkit-transform: scaleY(0.5);
   transform: scaleY(0.5);
   -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
   transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
 }
+/* ============== Active Menu List  ============== */
 .menu-hover-style-2 .main-navigation-ul li.current-page-ancestor a {
   background-image: linear-gradient(bottom, #ffcd00 50%, transparent 50%);
   background-image: -o-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
   background-image: -moz-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
   background-image: -webkit-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
   background-image: -ms-linear-gradient(bottom, #ffcd00 50%, transparent 50%);
+}
+/* ============== Custom Classes ============== */
+.header-pg-row .page-section-content {
+  height: 100%;
+  padding: 0px;
+}
+.header-pg-row .page-section-content .mk-padding-wrapper {
+  height: 100%;
+}
+.header-pg-row .page-section-content .mk-padding-wrapper .header-title-column .wpb_row {
+  height: 100%;
+}
+.header-pg-row .page-section-content .mk-padding-wrapper .header-title-column .wpb_row .pg-title-bg {
+  height: 100%;
+}
+.header-pg-row .page-section-content .mk-padding-wrapper .header-title-column .wpb_row .pg-title-bg .vc_column-inner {
+  height: 100%;
+}
+.header-pg-row .page-section-content .mk-padding-wrapper .header-title-column .wpb_row .pg-title-bg .vc_column-inner .wpb_wrapper {
+  height: 100%;
 }
 .pg-title-column {
   position: relative;
@@ -150,6 +174,11 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   display: block;
+}
+@media screen and (max-width: 482px) {
+  .pg-title {
+    top: 500px;
+  }
 }
 .pg-title p {
   background-image: linear-gradient(bottom, #000 50%, transparent 50%);
@@ -167,7 +196,16 @@ body {
 }
 @media screen and (max-width: 782px) {
   .pg-title p {
-    font-size: 5.6vw;
+    font-size: 7.06vw;
+  }
+}
+@media screen and (max-width: 482px) {
+  .pg-title p {
+    background-image: linear-gradient(bottom, #000 60%, transparent 60%);
+    background-image: -o-linear-gradient(bottom, #000 60%, transparent 60%);
+    background-image: -moz-linear-gradient(bottom, #000 60%, transparent 60%);
+    background-image: -webkit-linear-gradient(bottom, #000 60%, transparent 60%);
+    background-image: -ms-linear-gradient(bottom, #000 60%, transparent 60%);
   }
 }
 .pg-indent {
@@ -175,7 +213,7 @@ body {
 }
 @media screen and (max-width: 782px) {
   .pg-indent {
-    padding: 0px 25px;
+    padding: 0px;
   }
 }
 .pg-heading h2 {
@@ -224,7 +262,7 @@ body {
 .bw-column-text p {
   color: #fff;
   font-size: 1.25vw;
-  padding: 0px 40px;
+  padding: 0px 20px;
 }
 @media screen and (max-width: 768px) {
   .bw-column-text p {
@@ -243,12 +281,41 @@ body {
   float: none;
   margin: 0 auto;
 }
+/* ============== Pattern Styling  ============== */
+.pattern-row .page-section-content {
+  height: 100%;
+  padding: 0px !important;
+}
+.pattern-row .page-section-content .mk-padding-wrapper {
+  height: 100%;
+  padding: 0px;
+}
+.pattern-row .page-section-content .mk-padding-wrapper .pattern-column {
+  padding: 0px;
+}
+.pattern-row .page-section-content .mk-padding-wrapper .pattern-column .pattern-image {
+  margin-bottom: 0px;
+  height: 100%;
+}
+.pattern-row .page-section-content .mk-padding-wrapper .pattern-column .pattern-image .mk-image-holder {
+  height: 100%;
+}
+.pattern-row .page-section-content .mk-padding-wrapper .pattern-column .pattern-image .mk-image-holder .mk-image-inner {
+  height: 100%;
+}
+.pattern-row .page-section-content .mk-padding-wrapper .pattern-column .pattern-image .mk-image-holder .mk-image-inner img {
+  position: absolute;
+  bottom: 0px;
+  left: -250px;
+}
+/* ============== Accordoin Styling  ============== */
 .accordion-base div div svg {
   fill: #0075c9;
 }
 .mk-accordion.simple-style .mk-accordion-single.current .mk-accordion-tab > .mk-svg-icon {
   fill: #c1c1c1;
 }
+/* ============== Menu Link Styling ============== */
 .dark-logo {
   width: 200px;
 }
@@ -285,8 +352,8 @@ ul#menu-main_menu li ul.sub-menu li a {
 .main-navigation-ul ul.sub-menu li.current-menu-item a.menu-item-link {
   color: #0075c9 !important;
 }
+/* ============== Main Menu Links, Buttons and Styles ============== */
 #menu-main_menu li.menu-item.no-mega-menu {
-  margin-right: 10px;
   height: auto !important;
   margin-top: 45px !important;
 }
@@ -294,66 +361,137 @@ ul#menu-main_menu li ul.sub-menu li a {
   height: auto !important;
   line-height: normal !important;
 }
+#menu-main_menu li.menu-item.no-mega-menu:first-child .sub-menu {
+  left: -40px;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(2) .sub-menu {
+  left: -40px;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3) {
+  margin-right: 25px;
+}
+@media screen and (max-width: 1325px) {
+  #menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3) {
+    margin-right: 10px;
+  }
+}
 #menu-main_menu li.menu-item.no-mega-menu:nth-child(-n+3) a {
   font-size: 18px;
-  margin-right: 10px;
-}
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(4) {
-  padding: 0px;
-  height: 40px;
-  top: 30px;
-  position: relative;
-  border: 3px solid #0075c9;
-  margin-left: 20px;
-  transition: all 0.3s ease-in;
-  margin-top: 0px !important;
-}
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(4) a {
-  height: 100%;
-  line-height: 45px !important;
-  color: #fff;
-}
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(4) a:hover {
-  color: #0075c9 !important;
-}
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(4):hover {
-  background: #fff;
-  color: #0075c9;
-  border: 3px solid #0075c9;
 }
 #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) {
+  padding: 0px;
   width: 140px;
+  top: 35px;
+  position: relative;
+  border: 3px solid #0075c9;
+  margin-right: 10px;
+  transition: all 0.3s ease-in;
+  margin-top: 0px !important;
 }
 @media screen and (max-width: 1220px) {
   #menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) {
     width: 120px;
   }
 }
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) {
-  padding: 0px;
-  height: 40px;
-  top: 30px;
-  position: relative;
-  border: 3px solid #0075c9;
-  margin-right: 10px;
-  transition: all 0.3s ease-in;
-  margin-top: 0px !important;
-}
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) a {
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) a {
   height: 100%;
-  line-height: 45px !important;
+  line-height: 35px !important;
   color: #0075c9;
 }
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5) a:hover {
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4) a:hover {
   color: #fff !important;
 }
-#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+5):hover {
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4):hover {
   background: #0075c9;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(n+4):hover a {
+  color: #fff !important;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(4) a {
   color: #fff;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(4):hover {
+  background: #fff;
+  border: 3px solid #0075c9;
+}
+#menu-main_menu li.menu-item.no-mega-menu:nth-child(4):hover a {
+  color: #0075c9 !important;
 }
 .header-grid {
   max-width: none;
 }
 .mk-header-nav-container.one-row-style.menu-hover-style-2 {
   padding: 0px 25px;
+}
+/* ============== Footer Menu ============== */
+#mk-footer {
+  background-color: #000 !important;
+}
+#mk-footer .footer-wrapper {
+  max-width: 1250px;
+}
+@media screen and (max-width: 768px) {
+  #mk-footer .footer-wrapper .mk-padding-wrapper div section div img {
+    display: block;
+    margin: 0 auto;
+  }
+}
+#mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before {
+  display: none;
+  top: 1px;
+  color: rgba(255, 255, 255, 0.7);
+}
+@media screen and (max-width: 768px) {
+  #mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before {
+    display: block;
+    right: 35%;
+    font-size: 25px;
+  }
+}
+@media screen and (max-width: 485px) {
+  #mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children::before {
+    right: 30%;
+  }
+}
+#mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children a, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children a, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children a {
+  display: block;
+  text-align: center;
+  color: #fff !important;
+  text-transform: uppercase;
+  font-family: Futura LT Pro Heading;
+  font-size: 16px;
+}
+#mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu {
+  display: block;
+  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  #mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu {
+    display: none;
+  }
+}
+#mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a {
+  color: #95989a !important;
+  font-family: Futura LT Pro Body;
+  font-size: 14px;
+  text-transform: capitalize;
+}
+#mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a .mk-svg-icon, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a .mk-svg-icon, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a .mk-svg-icon {
+  display: none;
+}
+#sub-footer {
+  background: #000;
+}
+.footer-column .footer-text-gold {
+  color: #ffcd00 !important;
+  font-family: Futura LT Pro Heading;
+}
+@media screen and (max-width: 768px) {
+  .footer-column img {
+    display: block;
+    margin: 0 auto;
+  }
+  .footer-column p {
+    text-align: center;
+  }
 }
