--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -262,7 +262,7 @@ p {
         font-size: $h1-heading;
         text-transform: uppercase;
         font-family: $h-font;
-        color: $white !important;
+        color: $gold !important;
         padding: 0 15px;
         height: auto;
         display: inline-block;    
