--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -189,7 +189,7 @@ p {
   font-size: 53px;
   text-transform: uppercase;
   font-family: Futura LT Pro Heading;
-  color: #fff !important;
+  color: #ffcd00 !important;
   padding: 0 15px;
   height: auto;
   display: inline-block;
